test/examples/analyzer/invalid/003_missing_main.spell
# Missing "main" method

no#main () = pass